--- a/SMSdroid/src/main/res/layout/messagelist.xml
+++ b/SMSdroid/src/main/res/layout/messagelist.xml
@@ -15,92 +15,115 @@
 		not, see <http://www.gnu.org/licenses/>.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent"
-              android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
 
     <com.google.android.gms.ads.AdView
-            android:id="@+id/ads"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:adUnitId="ca-app-pub-1948477123608376/5569580480"
-            app:adSize="SMART_BANNER"/>
+        android:id="@+id/ads"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:adUnitId="ca-app-pub-1948477123608376/5569580480"
+        app:adSize="SMART_BANNER"/>
 
-    <ListView
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:scrollbars="vertical"
+        >
+        <ListView
             android:id="@id/android:list"
             android:layout_width="fill_parent"
             android:layout_height="0dip"
-            android:layout_weight="1"
+            android:layout_weight="5"
             android:background="?android:attr/colorBackground"
             android:cacheColorHint="?android:attr/colorBackground"
             android:choiceMode="singleChoice"
             android:drawSelectorOnTop="false"
             android:fastScrollEnabled="true"
             android:scrollingCache="true"/>
-
-    <RelativeLayout
-            android:id="@+id/text_layout"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/suggestRecyclerView"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:addStatesFromChildren="true"
-            style="@style/ButtonBar">
+            android:layout_height="0dip"
+            android:layout_weight="1"
+
+            android:background="?android:attr/colorBackground"
+            ></android.support.v7.widget.RecyclerView>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/intentRecyclerView"
+            android:layout_width="fill_parent"
+            android:layout_height="0dip"
+            android:layout_weight="1"
+            android:visibility="gone"
+            ></android.support.v7.widget.RecyclerView>
+
+    </LinearLayout>
+    <RelativeLayout
+        android:id="@+id/text_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:addStatesFromChildren="true"
+        style="@style/ButtonBar">
 
         <Button
-                android:id="@+id/send_"
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:drawableTop="@drawable/ic_action_send_dark"
-                android:text="@string/send_"/>
+            android:id="@+id/send_"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:drawableTop="@drawable/ic_action_send_dark"
+            android:text="@string/send_"/>
 
         <EditText
-                android:id="@+id/text"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_toLeftOf="@id/send_"
-                android:layout_toStartOf="@id/send_"
-                android:minHeight="@dimen/edit_text_height_min"
-                android:maxHeight="@dimen/edit_text_height_max"
-                android:gravity="top"
-                android:hint="@string/text_hint"
-                android:imeOptions="actionDone|flagNoEnterAction"
-                android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
-                android:nextFocusRight="@+id/send_"/>
+            android:id="@+id/text"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@id/send_"
+            android:layout_toStartOf="@id/send_"
+            android:minHeight="@dimen/edit_text_height_min"
+            android:maxHeight="@dimen/edit_text_height_max"
+            android:gravity="top"
+            android:hint="@string/text_hint"
+            android:imeOptions="actionDone|flagNoEnterAction"
+            android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
+            android:nextFocusRight="@+id/send_"/>
 
         <TextView
-                android:id="@+id/text_"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/text"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:background="#88000000"
-                android:paddingBottom="3dip"
-                android:paddingLeft="3dip"
-                android:paddingRight="3dip"
-                android:textColor="#ffffffff"
-                android:textStyle="bold"/>
+            android:id="@+id/text_"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/text"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:background="#88000000"
+            android:paddingBottom="3dip"
+            android:paddingLeft="3dip"
+            android:paddingRight="3dip"
+            android:textColor="#ffffffff"
+            android:textStyle="bold"/>
 
         <TextView
-                android:id="@+id/text_paste"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/text"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:background="#88000000"
-                android:clickable="true"
-                android:focusable="true"
-                android:paddingBottom="3dip"
-                android:paddingLeft="3dip"
-                android:paddingRight="3dip"
-                android:text="@string/paste_"
-                android:textColor="#ffffffff"
-                android:textStyle="bold"/>
+            android:id="@+id/text_paste"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/text"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:background="#88000000"
+            android:clickable="true"
+            android:focusable="true"
+            android:paddingBottom="3dip"
+            android:paddingLeft="3dip"
+            android:paddingRight="3dip"
+            android:text="@string/paste_"
+            android:textColor="#ffffffff"
+            android:textStyle="bold"/>
 
     </RelativeLayout>
 
