--- a/SMSdroid/src/main/res/layout/messagelist.xml
+++ b/SMSdroid/src/main/res/layout/messagelist.xml
@@ -1,21 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2009-2015 Felix Bechstein -->
-<!--
-		This file is part of SMSdroid. This program is free software; you can
-		redistribute it and/or modify it under the terms of the GNU General
-		Public License as published by the Free Software Foundation; either
-		version 3 of the License, or (at your option) any later version.
--->
-<!--
-		This program is distributed in the hope that it will be useful, but
-		WITHOUT ANY WARRANTY; without even the implied warranty of
-		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
-		General Public License for more details. You should have received a
-		copy of the GNU General Public License along with this program; If
-		not, see <http://www.gnu.org/licenses/>.
--->
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical">
@@ -28,40 +15,40 @@
         app:adSize="SMART_BANNER"/>
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:scrollbars="vertical"
-        >
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="14"
+        android:orientation="vertical">
+
         <ListView
             android:id="@id/android:list"
-            android:layout_width="fill_parent"
-            android:layout_height="0dip"
-            android:layout_weight="5"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="11"
             android:background="?android:attr/colorBackground"
             android:cacheColorHint="?android:attr/colorBackground"
             android:choiceMode="singleChoice"
             android:drawSelectorOnTop="false"
-            android:fastScrollEnabled="true"
-            android:scrollingCache="true"/>
+            android:fastScrollEnabled="true" />
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/suggestRecyclerView"
             android:layout_width="fill_parent"
             android:layout_height="0dip"
-            android:layout_weight="1"
+            android:layout_weight="3"
 
-            android:background="?android:attr/colorBackground"
-            ></android.support.v7.widget.RecyclerView>
+            android:background="?android:attr/colorBackground"></android.support.v7.widget.RecyclerView>
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/intentRecyclerView"
             android:layout_width="fill_parent"
             android:layout_height="0dip"
-            android:layout_weight="1"
-            android:visibility="gone"
-            ></android.support.v7.widget.RecyclerView>
+            android:layout_weight="3"
+            android:visibility="gone"></android.support.v7.widget.RecyclerView>
 
     </LinearLayout>
+
+
     <RelativeLayout
         android:id="@+id/text_layout"
         android:layout_width="fill_parent"
@@ -90,6 +77,8 @@
             android:maxHeight="@dimen/edit_text_height_max"
             android:gravity="top"
             android:hint="@string/text_hint"
+            android:fitsSystemWindows="true"
+
             android:imeOptions="actionDone|flagNoEnterAction"
             android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
             android:nextFocusRight="@+id/send_"/>
@@ -107,6 +96,14 @@
             android:paddingRight="3dip"
             android:textColor="#ffffffff"
             android:textStyle="bold"/>
+        <EditText
+            android:id="@+id/btnSearch"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:hint="Search"
+            android:visibility="gone"
+
+            />
 
         <TextView
             android:id="@+id/text_paste"
@@ -123,8 +120,10 @@
             android:paddingRight="3dip"
             android:text="@string/paste_"
             android:textColor="#ffffffff"
+            android:visibility="gone"
             android:textStyle="bold"/>
 
     </RelativeLayout>
-
 </LinearLayout>
+
+
