--- a/SMSdroid/src/main/res/layout/suggest_item.xml
+++ b/SMSdroid/src/main/res/layout/suggest_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="wrap_content"
+    android:orientation="horizontal" android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <TextView
@@ -10,7 +10,7 @@
         android:layout_marginLeft="10dp"
         android:background="@drawable/bg_msg_you"
         android:padding="8dp"
-        android:scrollbars="vertical"
+
         android:text="Default TExtsdksajdkkdjaskdjask"
         android:textColor="#ffffff"
         android:textSize="16sp" />
