--- a/SMSdroid/src/main/res/values/styles.xml
+++ b/SMSdroid/src/main/res/values/styles.xml
@@ -63,5 +63,7 @@
         <item name="android:background">@color/actionbar_background_color</item>
         <item name="background">@color/actionbar_background_color</item>
     </style>
-
+    <style name="TwoWayView">
+        <item name="android:orientation">horizontal</item>
+    </style>
 </resources>
